force-app/main/default/objects/Contact/fields/CWS_Legacy_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the ID for this Contact if this data came from a previously used system.</inlineHelpText>
    <label>Legacy Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>