force-app/main/default/objects/Contact/fields/CWS_Legacy_MNG_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_MNG_Contact_ID__c</fullName>
    <inlineHelpText>Indicates the Manage ID used for this Contact if this Contact previously existed in Manage.</inlineHelpText>
    <label>Legacy MNG Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>