force-app/main/default/objects/Contact/fields/CWS_Legacy_Salesforce_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Salesforce_Contact_ID__c</fullName>
    <inlineHelpText>Indicates the Salesforce ID used for this Contact if this Contact previously existed in Salesforce.</inlineHelpText>
    <label>Legacy Salesforce Contact ID (18)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>