force-app/main/default/objects/Contact/fields/CWS_Manage_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Account_Id__c</fullName>
    <formula>Account.CWS_Manage_Company_Rec_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manage Account Id</label>
    <type>Text</type>
</CustomField>