force-app/main/default/objects/Contact/fields/CWS_Manage_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Contact_Id__c</fullName>
    <label>Manage Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>