force-app/main/default/objects/Contact/fields/CWS_Manage_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Integration_Error__c</fullName>
    <label>Manage Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>