force-app/main/default/objects/Contact/fields/CWS_Manage_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_New_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean field to temporarily resolve duplicate contact issue by passing value to Boomi to filter out API requests to create a new Contact when there is already an API request pending.</description>
    <label>Manage New Contact</label>
    <type>Checkbox</type>
</CustomField>