force-app/main/default/objects/Contact/fields/CWS_Marketo_Lead_Score_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Marketo_Lead_Score_Status__c</fullName>
    <label>Marketo Lead Score Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>