force-app/main/default/objects/Contact/fields/CWS_Mkg_Subscription_CW_News__c.field-meta.xml
<CustomField>
    <fullName>CWS_Mkg_Subscription_CW_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mkg Subscription - CW News</label>
    <type>Checkbox</type>
</CustomField>