force-app/main/default/objects/Contact/fields/CWS_Mkg_Subscription_Industry_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>CWS_Mkg_Subscription_Industry_Knowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mkg Subscription - Industry Knowledge</label>
    <type>Checkbox</type>
</CustomField>