force-app/main/default/objects/Contact/fields/CWS_Modes_Mindset__c.field-meta.xml
<CustomField>
    <fullName>CWS_Modes_Mindset__c</fullName>
    <description>The field can be updated manually by any colleague with knowledge of the update or in bulk working with Sales Ops.</description>
    <label>Modes Mindset™</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Balance Builder</fullName>
            </value>
            <value>
                <fullName>Value Builder</fullName>
            </value>
            <value>
                <fullName>Empire Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>