force-app/main/default/objects/Contact/fields/CWS_Most_Recent_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Most_Recent_Score_Date__c</fullName>
    <inlineHelpText>Captures date stamped by Marketo when Lead Score updated.</inlineHelpText>
    <label>Most Recent Score Date</label>
    <type>Date</type>
</CustomField>