force-app/main/default/objects/Contact/fields/CWS_Netsuite_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Netsuite_Error__c</fullName>
    <description>This field will be used by Dell Boomi team to stamp any error in integration.</description>
    <label>NetSuite Integration Error</label>
    <type>TextArea</type>
</CustomField>