force-app/main/default/objects/Contact/fields/CWS_No_Territory_Mapping_Found__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_Territory_Mapping_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Territory Mapping Found</label>
    <type>Checkbox</type>
</CustomField>