force-app/main/default/objects/Contact/fields/CWS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CWS_Notes__c</fullName>
    <inlineHelpText>Captures marketing and sales notes on the Contact.</inlineHelpText>
    <label>Lead Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>