force-app/main/default/objects/Contact/fields/CWS_OML_Value__c.field-meta.xml
<CustomField>
    <fullName>CWS_OML_Value__c</fullName>
    <description>Values with two decimals (3.67) should be rounded by the partner, colleague, or SalesOps import spreadsheet to a one decimal entry (3.7). The field can be updated manually by any colleague with knowledge of the update or in bulk working with Sales Ops.</description>
    <label>OML™ Value</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>