force-app/main/default/objects/Contact/fields/CWS_Opt_In_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opt_In_Status__c</fullName>
    <description>Yes or No indicating the partner’s willingness to share results of the assessment. The field can be updated manually by any colleague with knowledge of the update or in bulk working with Sales Ops.</description>
    <label>Opt-In Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>