force-app/main/default/objects/Contact/fields/CWS_Outreach_Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Outreach_Prospect_ID__c</fullName>
    <description>Used in Lean Data Outreach Sync</description>
    <label>Outreach Prospect ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>