force-app/main/default/objects/Contact/fields/CWS_Page_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Page_Source_Most_Recent__c</fullName>
    <label>Page Source Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>