force-app/main/default/objects/Contact/fields/CWS_Peer_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>CWS_Peer_Group_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Group Member</label>
    <type>Checkbox</type>
</CustomField>