force-app/main/default/objects/Contact/fields/CWS_Phone_Company__c.field-meta.xml
<CustomField>
    <fullName>CWS_Phone_Company__c</fullName>
    <label>Phone - Company</label>
    <type>Phone</type>
</CustomField>