force-app/main/default/objects/Contact/fields/CWS_Phone_Direct__c.field-meta.xml
<CustomField>
    <fullName>CWS_Phone_Direct__c</fullName>
    <label>Phone - Direct</label>
    <type>Phone</type>
</CustomField>