force-app/main/default/objects/Contact/fields/CWS_Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CWS_Phone_Mobile__c</fullName>
    <label>Phone - Mobile</label>
    <type>Phone</type>
</CustomField>