force-app/main/default/objects/Contact/fields/CWS_Phone_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>CWS_Phone_Tertiary__c</fullName>
    <inlineHelpText>Captures phone number of non-surviving Contact as part of Contact rationalization.</inlineHelpText>
    <label>Phone - Tertiary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>