force-app/main/default/objects/Contact/fields/CWS_Potential_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>CWS_Potential_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by flow on duplicate record set - used by outreach sync.</description>
    <label>Potential Duplicate</label>
    <type>Checkbox</type>
</CustomField>