force-app/main/default/objects/Contact/fields/CWS_Preferred_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Preferred_Distributor__c</fullName>
    <inlineHelpText>Captures the contact&apos;s preferred distributor.</inlineHelpText>
    <label>Preferred Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Preferred_Distributor</valueSetName>
    </valueSet>
</CustomField>