force-app/main/default/objects/Contact/fields/CWS_Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Billing Contact</label>
    <type>Checkbox</type>
</CustomField>