force-app/main/default/objects/Contact/fields/CWS_Priority__c.field-meta.xml
<CustomField>
    <fullName>CWS_Priority__c</fullName>
    <inlineHelpText>Captures the Contact&apos;s level of importance; used for alerts and escalations.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Priority</valueSetName>
    </valueSet>
</CustomField>