force-app/main/default/objects/Contact/fields/CWS_Product_Relationship__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Relationship__c</fullName>
    <label>Product Relationship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUTO / CTRL Admin</fullName>
                <isActive>false</isActive>
                <label>AUTO / CTRL Admin</label>
            </value>
            <value>
                <fullName>AUTO / SELL / CTRL Admin</fullName>
                <isActive>false</isActive>
                <label>AUTO / SELL / CTRL Admin</label>
            </value>
            <value>
                <fullName>AUTO / SELL Admin</fullName>
                <isActive>false</isActive>
                <label>AUTO / SELL Admin</label>
            </value>
            <value>
                <fullName>AUTO Admin</fullName>
                <isActive>false</isActive>
                <label>AUTO Admin</label>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>CT Product Primary Technical Contact</fullName>
                <isActive>false</isActive>
                <label>CT Product Primary Technical Contact</label>
            </value>
            <value>
                <fullName>Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>End User Client</fullName>
            </value>
            <value>
                <fullName>Evolve</fullName>
            </value>
            <value>
                <fullName>Fortify</fullName>
            </value>
            <value>
                <fullName>Help Desk</fullName>
            </value>
            <value>
                <fullName>ITBOOST</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>MNG / AUTO / SELL / CTRL Admin</fullName>
                <isActive>false</isActive>
                <label>MNG / AUTO / SELL / CTRL Admin</label>
            </value>
            <value>
                <fullName>MNG / AUTO / SELL Admin</fullName>
                <isActive>false</isActive>
                <label>MNG / AUTO / SELL Admin</label>
            </value>
            <value>
                <fullName>MNG / CTRL Admin</fullName>
                <isActive>false</isActive>
                <label>MNG / CTRL Admin</label>
            </value>
            <value>
                <fullName>MNG / SELL Admin</fullName>
                <isActive>false</isActive>
                <label>MNG / SELL Admin</label>
            </value>
            <value>
                <fullName>MNG Admin / AUTO Admin</fullName>
                <isActive>false</isActive>
                <label>MNG Admin / AUTO Admin</label>
            </value>
            <value>
                <fullName>MNG Admin 1</fullName>
                <isActive>false</isActive>
                <label>MNG Admin 1</label>
            </value>
            <value>
                <fullName>MNG Admin 2</fullName>
                <isActive>false</isActive>
                <label>MNG Admin 2</label>
            </value>
            <value>
                <fullName>Perch</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>RMM</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>SELL Admin</fullName>
                <isActive>false</isActive>
                <label>SELL Admin</label>
            </value>
            <value>
                <fullName>Sell Primary Contact</fullName>
                <isActive>false</isActive>
                <label>Sell Primary Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>