force-app/main/default/objects/Contact/fields/CWS_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Rejected_Reason</valueSetName>
    </valueSet>
</CustomField>