force-app/main/default/objects/Contact/fields/CWS_RingLead_DMS_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_RingLead_DMS_Status__c</fullName>
    <label>RingLead DMS Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>