force-app/main/default/objects/Contact/fields/CWS_Sales_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sales_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Opt Out</label>
    <type>Checkbox</type>
</CustomField>