force-app/main/default/objects/Contact/fields/CWS_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>