force-app/main/default/objects/Contact/fields/CWS_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>