force-app/main/default/objects/Contact/fields/CWS_SSO_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_Login_Email__c</fullName>
    <description>Field to store the unique SSO Login Email for the contact.</description>
    <inlineHelpText>Field to store the unique SSO Login Email for the contact.</inlineHelpText>
    <label>CW SSO Login Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>