force-app/main/default/objects/Contact/fields/CWS_SSO_User_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>SSO User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>