force-app/main/default/objects/Contact/fields/CWS_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Team_Assignment__c</fullName>
    <inlineHelpText>Indicates the ConnectWise Sales team assigned to this Contact.</inlineHelpText>
    <label>Team Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Team_Assignment</valueSetName>
    </valueSet>
</CustomField>