force-app/main/default/objects/Contact/fields/CWS_Tertiary_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Tertiary_Email__c</fullName>
    <inlineHelpText>Captures the additional Email IDs from legacy data</inlineHelpText>
    <label>Email - Tertiary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>