force-app/main/default/objects/Contact/fields/CWS_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>CWS_Time_Zone__c</fullName>
    <description>Picklist values to define Time Zone Code and Time Zone Name.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Time_Zone</valueSetName>
    </valueSet>
</CustomField>