force-app/main/default/objects/Contact/fields/CWS_ZuoraError__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraError__c</fullName>
    <label>Zuora Integration Error</label>
    <type>TextArea</type>
</CustomField>