force-app/main/default/objects/Contact/fields/Initial_Sequence_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sequence_Date__c</fullName>
    <label>Initial Sequence Date</label>
    <type>Date</type>
</CustomField>