force-app/main/default/objects/Contact/fields/Outreach_Current_Sequence_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Sequence User Integration ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outreach_Current_Sequence_UserID_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>