force-app/main/default/objects/Contact/validationRules/CWS_Cannot_Reassign_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Cannot_Reassign_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c) , 
ISCHANGED(AccountId )
)</errorConditionFormula>
    <errorMessage>This contact is already associated to an Account. Please create a new Contact as necessary</errorMessage>
</ValidationRule>