force-app/main/default/objects/Contact/validationRules/CWS_Contact_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Contact_Country_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISBLANK(MailingCountry)
)</errorConditionFormula>
    <errorMessage>Please enter a valid Country to proceed.</errorMessage>
</ValidationRule>