force-app/main/default/objects/Contact/validationRules/CWS_Contact_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Contact_Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
ISBLANK( Email ),
OR(
ISPICKVAL( Account.CWS_Invoice_Delivery_Preference__c , &quot;Email&quot;),
ISPICKVAL(Account.CWS_Invoice_Delivery_Preference__c, &quot;Email and Print&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please populate the Primary Email Address for this Contact.</errorMessage>
</ValidationRule>