force-app/main/default/objects/Contact/validationRules/CWS_Contact_SQLWorkingChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Contact_SQLWorkingChange</fullName>
    <active>true</active>
    <description>Validate that only specific profile may move Lead status to SQL Working</description>
    <errorConditionFormula>AND(
    NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
    NOT(
        OR(
            $Profile.Name=&apos;CWS_Sales_Rep&apos;,
            $Profile.Name=&apos;CWS_Sales_Manager&apos;,
            $Profile.Name=&apos;CWS_Sales_Manager&apos;,
            $Profile.Name=&apos;System Administrator&apos;,
            $Profile.Name=&apos;CWS_Global_Sales_Ops&apos;,
            $Profile.Name=&apos;CWS_Marketo_Admin&apos;
        )
    ),
    ISCHANGED(CWS_Contact_Status__c),  
    ISPICKVAL(CWS_Contact_Status__c ,&apos;SQL Working&apos;)
)</errorConditionFormula>
    <errorDisplayField>CWS_Contact_Status__c</errorDisplayField>
    <errorMessage>You do not have access to move the Contact to this status. Please move the Status to SQL to hand-off to the SE/PSE to move the Contact forward.</errorMessage>
</ValidationRule>