force-app/main/default/objects/Contact/validationRules/CWS_Contact_State_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Contact_State_Mandatory</fullName>
    <active>false</active>
    <description>if the Country is United States, Canada, or Australia, then state is mandatory</description>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISBLANK(MailingState),
OR (
MailingCountry = &quot;Australia&quot; ,
MailingCountry = &quot;Canada&quot; ,
MailingCountry = &quot;United States&quot; 
)
)</errorConditionFormula>
    <errorMessage>Please enter a valid State to proceed.</errorMessage>
</ValidationRule>